// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LaTeX Plugin should handle LaTeX with surrounding text 1`] = `
<div>
  <div
    class="ant-x-markdown x-markdown"
    style="direction: ltr;"
  >
    <p>
      This is an equation: 
      <span
        class="inline-katex"
      >
        <span
          class="katex-display"
        >
          <span
            class="katex"
          >
            <span
              aria-hidden="true"
              class="katex-html"
            >
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 0.6833em;"
                />
                <span
                  class="mord mathnormal"
                  style="margin-right: 0.05764em;"
                >
                  E
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2778em;"
                />
                <span
                  class="mrel"
                >
                  =
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2778em;"
                />
              </span>
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 0.8641em;"
                />
                <span
                  class="mord mathnormal"
                >
                  m
                </span>
                <span
                  class="mord"
                >
                  <span
                    class="mord mathnormal"
                  >
                    c
                  </span>
                  <span
                    class="msupsub"
                  >
                    <span
                      class="vlist-t"
                    >
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 0.8641em;"
                        >
                          <span
                            style="top: -3.113em; margin-right: 0.05em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 2.7em;"
                            />
                            <span
                              class="sizing reset-size6 size3 mtight"
                            >
                              <span
                                class="mord mtight"
                              >
                                2
                              </span>
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
       in text
    </p>
  </div>
</div>
`;

exports[`LaTeX Plugin should handle align* syntax replacement 1`] = `
<div>
  <div
    class="ant-x-markdown x-markdown"
    style="direction: ltr;"
  >
    <p>
      <span
        class="inline-katex"
      >
        <span
          class="katex-display"
        >
          <span
            class="katex"
          >
            <span
              aria-hidden="true"
              class="katex-html"
            >
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 1.5em; vertical-align: -0.5em;"
                />
                <span
                  class="mord"
                >
                  <span
                    class="mtable"
                  >
                    <span
                      class="col-align-r"
                    >
                      <span
                        class="vlist-t vlist-t2"
                      >
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height: 1em;"
                          >
                            <span
                              style="top: -3.16em;"
                            >
                              <span
                                class="pstrut"
                                style="height: 3em;"
                              />
                              <span
                                class="mord"
                              >
                                <span
                                  class="mord mathnormal"
                                >
                                  x
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            class="vlist-s"
                          >
                            ​
                          </span>
                        </span>
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height: 0.5em;"
                          >
                            <span />
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="col-align-l"
                    >
                      <span
                        class="vlist-t vlist-t2"
                      >
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height: 1em;"
                          >
                            <span
                              style="top: -3.16em;"
                            >
                              <span
                                class="pstrut"
                                style="height: 3em;"
                              />
                              <span
                                class="mord"
                              >
                                <span
                                  class="mord"
                                />
                                <span
                                  class="mspace"
                                  style="margin-right: 0.2778em;"
                                />
                                <span
                                  class="mrel"
                                >
                                  =
                                </span>
                                <span
                                  class="mspace"
                                  style="margin-right: 0.2778em;"
                                />
                                <span
                                  class="mord mathnormal"
                                  style="margin-right: 0.03588em;"
                                >
                                  y
                                </span>
                                <span
                                  class="mspace"
                                >
                                </span>
                                <span
                                  class="mord mathnormal"
                                  style="margin-right: 0.03588em;"
                                >
                                  y
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            class="vlist-s"
                          >
                            ​
                          </span>
                        </span>
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height: 0.5em;"
                          >
                            <span />
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="arraycolsep"
                      style="width: 1em;"
                    />
                    <span
                      class="col-align-r"
                    >
                      <span
                        class="vlist-t vlist-t2"
                      >
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height: 1em;"
                          >
                            <span
                              style="top: -3.16em;"
                            >
                              <span
                                class="pstrut"
                                style="height: 3em;"
                              />
                              <span
                                class="mord"
                              >
                                <span
                                  class="mrel"
                                >
                                  =
                                </span>
                                <span
                                  class="mspace"
                                  style="margin-right: 0.2778em;"
                                />
                                <span
                                  class="mord mathnormal"
                                  style="margin-right: 0.04398em;"
                                >
                                  z
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            class="vlist-s"
                          >
                            ​
                          </span>
                        </span>
                        <span
                          class="vlist-r"
                        >
                          <span
                            class="vlist"
                            style="height: 0.5em;"
                          >
                            <span />
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`LaTeX Plugin should handle complex LaTeX expressions 1`] = `
<div>
  <div
    class="ant-x-markdown x-markdown"
    style="direction: ltr;"
  >
    <p>
      <span
        class="inline-katex"
      >
        <span
          class="katex-display"
        >
          <span
            class="katex"
          >
            <span
              aria-hidden="true"
              class="katex-html"
            >
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 2.9291em; vertical-align: -1.2777em;"
                />
                <span
                  class="mop op-limits"
                >
                  <span
                    class="vlist-t vlist-t2"
                  >
                    <span
                      class="vlist-r"
                    >
                      <span
                        class="vlist"
                        style="height: 1.6514em;"
                      >
                        <span
                          style="top: -1.8723em; margin-left: 0em;"
                        >
                          <span
                            class="pstrut"
                            style="height: 3.05em;"
                          />
                          <span
                            class="sizing reset-size6 size3 mtight"
                          >
                            <span
                              class="mord mtight"
                            >
                              <span
                                class="mord mathnormal mtight"
                              >
                                i
                              </span>
                              <span
                                class="mrel mtight"
                              >
                                =
                              </span>
                              <span
                                class="mord mtight"
                              >
                                1
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          style="top: -3.05em;"
                        >
                          <span
                            class="pstrut"
                            style="height: 3.05em;"
                          />
                          <span>
                            <span
                              class="mop op-symbol large-op"
                            >
                              ∑
                            </span>
                          </span>
                        </span>
                        <span
                          style="top: -4.3em; margin-left: 0em;"
                        >
                          <span
                            class="pstrut"
                            style="height: 3.05em;"
                          />
                          <span
                            class="sizing reset-size6 size3 mtight"
                          >
                            <span
                              class="mord mtight"
                            >
                              <span
                                class="mord mathnormal mtight"
                              >
                                n
                              </span>
                            </span>
                          </span>
                        </span>
                      </span>
                      <span
                        class="vlist-s"
                      >
                        ​
                      </span>
                    </span>
                    <span
                      class="vlist-r"
                    >
                      <span
                        class="vlist"
                        style="height: 1.2777em;"
                      >
                        <span />
                      </span>
                    </span>
                  </span>
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.1667em;"
                />
                <span
                  class="mord"
                >
                  <span
                    class="mord mathnormal"
                  >
                    x
                  </span>
                  <span
                    class="msupsub"
                  >
                    <span
                      class="vlist-t vlist-t2"
                    >
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 0.3117em;"
                        >
                          <span
                            style="top: -2.55em; margin-left: 0em; margin-right: 0.05em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 2.7em;"
                            />
                            <span
                              class="sizing reset-size6 size3 mtight"
                            >
                              <span
                                class="mord mathnormal mtight"
                              >
                                i
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          class="vlist-s"
                        >
                          ​
                        </span>
                      </span>
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 0.15em;"
                        >
                          <span />
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2778em;"
                />
                <span
                  class="mrel"
                >
                  =
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2778em;"
                />
              </span>
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 3.0652em; vertical-align: -1.4138em;"
                />
                <span
                  class="mop op-limits"
                >
                  <span
                    class="vlist-t vlist-t2"
                  >
                    <span
                      class="vlist-r"
                    >
                      <span
                        class="vlist"
                        style="height: 1.6514em;"
                      >
                        <span
                          style="top: -1.8723em; margin-left: 0em;"
                        >
                          <span
                            class="pstrut"
                            style="height: 3.05em;"
                          />
                          <span
                            class="sizing reset-size6 size3 mtight"
                          >
                            <span
                              class="mord mtight"
                            >
                              <span
                                class="mord mathnormal mtight"
                                style="margin-right: 0.05724em;"
                              >
                                j
                              </span>
                              <span
                                class="mrel mtight"
                              >
                                =
                              </span>
                              <span
                                class="mord mtight"
                              >
                                1
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          style="top: -3.05em;"
                        >
                          <span
                            class="pstrut"
                            style="height: 3.05em;"
                          />
                          <span>
                            <span
                              class="mop op-symbol large-op"
                            >
                              ∏
                            </span>
                          </span>
                        </span>
                        <span
                          style="top: -4.3em; margin-left: 0em;"
                        >
                          <span
                            class="pstrut"
                            style="height: 3.05em;"
                          />
                          <span
                            class="sizing reset-size6 size3 mtight"
                          >
                            <span
                              class="mord mtight"
                            >
                              <span
                                class="mord mathnormal mtight"
                              >
                                m
                              </span>
                            </span>
                          </span>
                        </span>
                      </span>
                      <span
                        class="vlist-s"
                      >
                        ​
                      </span>
                    </span>
                    <span
                      class="vlist-r"
                    >
                      <span
                        class="vlist"
                        style="height: 1.4138em;"
                      >
                        <span />
                      </span>
                    </span>
                  </span>
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.1667em;"
                />
                <span
                  class="mord"
                >
                  <span
                    class="mord mathnormal"
                    style="margin-right: 0.03588em;"
                  >
                    y
                  </span>
                  <span
                    class="msupsub"
                  >
                    <span
                      class="vlist-t vlist-t2"
                    >
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 0.3117em;"
                        >
                          <span
                            style="top: -2.55em; margin-left: -0.0359em; margin-right: 0.05em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 2.7em;"
                            />
                            <span
                              class="sizing reset-size6 size3 mtight"
                            >
                              <span
                                class="mord mathnormal mtight"
                                style="margin-right: 0.05724em;"
                              >
                                j
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          class="vlist-s"
                        >
                          ​
                        </span>
                      </span>
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 0.2861em;"
                        >
                          <span />
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`LaTeX Plugin should handle content without LaTeX 1`] = `
<div>
  <div
    class="ant-x-markdown x-markdown"
    style="direction: ltr;"
  >
    <p>
      Just plain text
    </p>
  </div>
</div>
`;

exports[`LaTeX Plugin should handle empty content 1`] = `<div />`;

exports[`LaTeX Plugin should handle mixed LaTeX syntaxes 1`] = `
<div>
  <div
    class="ant-x-markdown x-markdown"
    style="direction: ltr;"
  >
    <p>
      Inline: 
      <span
        class="inline-katex"
      >
        <span
          class="katex-display"
        >
          <span
            class="katex"
          >
            <span
              aria-hidden="true"
              class="katex-html"
            >
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 0.8641em;"
                />
                <span
                  class="mord"
                >
                  <span
                    class="mord mathnormal"
                  >
                    x
                  </span>
                  <span
                    class="msupsub"
                  >
                    <span
                      class="vlist-t"
                    >
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 0.8641em;"
                        >
                          <span
                            style="top: -3.113em; margin-right: 0.05em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 2.7em;"
                            />
                            <span
                              class="sizing reset-size6 size3 mtight"
                            >
                              <span
                                class="mord mtight"
                              >
                                2
                              </span>
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
       and block: 
      <span
        class="inline-katex"
      >
        <span
          class="katex-display"
        >
          <span
            class="katex"
          >
            <span
              aria-hidden="true"
              class="katex-html"
            >
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 2.476em; vertical-align: -0.9119em;"
                />
                <span
                  class="mop"
                >
                  <span
                    class="mop op-symbol large-op"
                    style="margin-right: 0.44445em; position: relative; top: -0.0011em;"
                  >
                    ∫
                  </span>
                  <span
                    class="msupsub"
                  >
                    <span
                      class="vlist-t vlist-t2"
                    >
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 1.564em;"
                        >
                          <span
                            style="top: -1.7881em; margin-left: -0.4445em; margin-right: 0.05em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 2.7em;"
                            />
                            <span
                              class="sizing reset-size6 size3 mtight"
                            >
                              <span
                                class="mord mtight"
                              >
                                0
                              </span>
                            </span>
                          </span>
                          <span
                            style="top: -3.8129em; margin-right: 0.05em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 2.7em;"
                            />
                            <span
                              class="sizing reset-size6 size3 mtight"
                            >
                              <span
                                class="mord mtight"
                              >
                                1
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          class="vlist-s"
                        >
                          ​
                        </span>
                      </span>
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 0.9119em;"
                        >
                          <span />
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.1667em;"
                />
                <span
                  class="mord mathnormal"
                  style="margin-right: 0.10764em;"
                >
                  f
                </span>
                <span
                  class="mopen"
                >
                  (
                </span>
                <span
                  class="mord mathnormal"
                >
                  x
                </span>
                <span
                  class="mclose"
                >
                  )
                </span>
                <span
                  class="mord mathnormal"
                >
                  d
                </span>
                <span
                  class="mord mathnormal"
                >
                  x
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`LaTeX Plugin should handle multiple LaTeX formulas 1`] = `
<div>
  <div
    class="ant-x-markdown x-markdown"
    style="direction: ltr;"
  >
    <p>
      <span
        class="inline-katex"
      >
        <span
          class="katex-display"
        >
          <span
            class="katex"
          >
            <span
              aria-hidden="true"
              class="katex-html"
            >
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 0.6667em; vertical-align: -0.0833em;"
                />
                <span
                  class="mord mathnormal"
                >
                  a
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2222em;"
                />
                <span
                  class="mbin"
                >
                  +
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2222em;"
                />
              </span>
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 0.6944em;"
                />
                <span
                  class="mord mathnormal"
                >
                  b
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
       and 
      <span
        class="inline-katex"
      >
        <span
          class="katex-display"
        >
          <span
            class="katex"
          >
            <span
              aria-hidden="true"
              class="katex-html"
            >
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 1.7936em; vertical-align: -0.686em;"
                />
                <span
                  class="mord"
                >
                  <span
                    class="mopen nulldelimiter"
                  />
                  <span
                    class="mfrac"
                  >
                    <span
                      class="vlist-t vlist-t2"
                    >
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 1.1076em;"
                        >
                          <span
                            style="top: -2.314em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 3em;"
                            />
                            <span
                              class="mord"
                            >
                              <span
                                class="mord mathnormal"
                              >
                                d
                              </span>
                            </span>
                          </span>
                          <span
                            style="top: -3.23em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 3em;"
                            />
                            <span
                              class="frac-line"
                              style="border-bottom-width: 0.04em;"
                            />
                          </span>
                          <span
                            style="top: -3.677em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 3em;"
                            />
                            <span
                              class="mord"
                            >
                              <span
                                class="mord mathnormal"
                              >
                                c
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          class="vlist-s"
                        >
                          ​
                        </span>
                      </span>
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 0.686em;"
                        >
                          <span />
                        </span>
                      </span>
                    </span>
                  </span>
                  <span
                    class="mclose nulldelimiter"
                  />
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`LaTeX Plugin should not throw error by default 1`] = `
<div>
  <div
    class="ant-x-markdown x-markdown"
    style="direction: ltr;"
  >
    <p>
      latex: 
    </p>
    <p>
      <span
        class="inline-katex"
      >
        <span
          class="katex-error"
          style="color: #cc0000;"
          title="ParseError: KaTeX parse error: Unexpected end of input in a macro argument, expected &#x27;}&#x27; at end of input: \\\\begin{align"
        >
          \\begin{align
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`LaTeX Plugin should render block LaTeX with $$..$$ syntax 1`] = `
<div>
  <div
    class="ant-x-markdown x-markdown"
    style="direction: ltr;"
  >
    <p>
      <span
        class="inline-katex"
      >
        <span
          class="katex-display"
        >
          <span
            class="katex"
          >
            <span
              aria-hidden="true"
              class="katex-html"
            >
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 1.7936em; vertical-align: -0.686em;"
                />
                <span
                  class="mord"
                >
                  <span
                    class="mopen nulldelimiter"
                  />
                  <span
                    class="mfrac"
                  >
                    <span
                      class="vlist-t vlist-t2"
                    >
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 1.1076em;"
                        >
                          <span
                            style="top: -2.314em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 3em;"
                            />
                            <span
                              class="mord"
                            >
                              <span
                                class="mord mathnormal"
                              >
                                b
                              </span>
                            </span>
                          </span>
                          <span
                            style="top: -3.23em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 3em;"
                            />
                            <span
                              class="frac-line"
                              style="border-bottom-width: 0.04em;"
                            />
                          </span>
                          <span
                            style="top: -3.677em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 3em;"
                            />
                            <span
                              class="mord"
                            >
                              <span
                                class="mord mathnormal"
                              >
                                a
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          class="vlist-s"
                        >
                          ​
                        </span>
                      </span>
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 0.686em;"
                        >
                          <span />
                        </span>
                      </span>
                    </span>
                  </span>
                  <span
                    class="mclose nulldelimiter"
                  />
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`LaTeX Plugin should render block LaTeX with \\[..\\] syntax 1`] = `
<div>
  <div
    class="ant-x-markdown x-markdown"
    style="direction: ltr;"
  >
    <span
      class="katex-display"
    >
      <span
        class="katex"
      >
        <span
          aria-hidden="true"
          class="katex-html"
        >
          <span
            class="base"
          >
            <span
              class="strut"
              style="height: 1.7936em; vertical-align: -0.686em;"
            />
            <span
              class="mord"
            >
              <span
                class="mopen nulldelimiter"
              />
              <span
                class="mfrac"
              >
                <span
                  class="vlist-t vlist-t2"
                >
                  <span
                    class="vlist-r"
                  >
                    <span
                      class="vlist"
                      style="height: 1.1076em;"
                    >
                      <span
                        style="top: -2.314em;"
                      >
                        <span
                          class="pstrut"
                          style="height: 3em;"
                        />
                        <span
                          class="mord"
                        >
                          <span
                            class="mord mathnormal"
                          >
                            b
                          </span>
                        </span>
                      </span>
                      <span
                        style="top: -3.23em;"
                      >
                        <span
                          class="pstrut"
                          style="height: 3em;"
                        />
                        <span
                          class="frac-line"
                          style="border-bottom-width: 0.04em;"
                        />
                      </span>
                      <span
                        style="top: -3.677em;"
                      >
                        <span
                          class="pstrut"
                          style="height: 3em;"
                        />
                        <span
                          class="mord"
                        >
                          <span
                            class="mord mathnormal"
                          >
                            a
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="vlist-s"
                    >
                      ​
                    </span>
                  </span>
                  <span
                    class="vlist-r"
                  >
                    <span
                      class="vlist"
                      style="height: 0.686em;"
                    >
                      <span />
                    </span>
                  </span>
                </span>
              </span>
              <span
                class="mclose nulldelimiter"
              />
            </span>
          </span>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`LaTeX Plugin should render inline LaTeX with $$\\n..\\n$$ syntax 1`] = `
<div>
  <div
    class="ant-x-markdown x-markdown"
    style="direction: ltr;"
  >
    <p>
      latex: 
      <span
        class="inline-katex"
      >
        <span
          class="katex-display"
        >
          <span
            class="katex"
          >
            <span
              aria-hidden="true"
              class="katex-html"
            >
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 1em; vertical-align: -0.25em;"
                />
                <span
                  class="mord mathnormal"
                  style="margin-right: 0.10764em;"
                >
                  f
                </span>
                <span
                  class="mopen"
                >
                  (
                </span>
                <span
                  class="mord mathnormal"
                >
                  λ
                </span>
                <span
                  class="mord mathnormal"
                >
                  x
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2222em;"
                />
                <span
                  class="mbin"
                >
                  +
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2222em;"
                />
              </span>
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 1em; vertical-align: -0.25em;"
                />
                <span
                  class="mopen"
                >
                  (
                </span>
                <span
                  class="mord"
                >
                  1
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2222em;"
                />
                <span
                  class="mbin"
                >
                  −
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2222em;"
                />
              </span>
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 1em; vertical-align: -0.25em;"
                />
                <span
                  class="mord mathnormal"
                >
                  λ
                </span>
                <span
                  class="mclose"
                >
                  )
                </span>
                <span
                  class="mord mathnormal"
                  style="margin-right: 0.03588em;"
                >
                  y
                </span>
                <span
                  class="mclose"
                >
                  )
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2778em;"
                />
                <span
                  class="mrel"
                >
                  ≤
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2778em;"
                />
              </span>
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 1em; vertical-align: -0.25em;"
                />
                <span
                  class="mord mathnormal"
                >
                  λ
                </span>
                <span
                  class="mord mathnormal"
                  style="margin-right: 0.10764em;"
                >
                  f
                </span>
                <span
                  class="mopen"
                >
                  (
                </span>
                <span
                  class="mord mathnormal"
                >
                  x
                </span>
                <span
                  class="mclose"
                >
                  )
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2222em;"
                />
                <span
                  class="mbin"
                >
                  +
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2222em;"
                />
              </span>
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 1em; vertical-align: -0.25em;"
                />
                <span
                  class="mopen"
                >
                  (
                </span>
                <span
                  class="mord"
                >
                  1
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2222em;"
                />
                <span
                  class="mbin"
                >
                  −
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2222em;"
                />
              </span>
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 1em; vertical-align: -0.25em;"
                />
                <span
                  class="mord mathnormal"
                >
                  λ
                </span>
                <span
                  class="mclose"
                >
                  )
                </span>
                <span
                  class="mord mathnormal"
                  style="margin-right: 0.10764em;"
                >
                  f
                </span>
                <span
                  class="mopen"
                >
                  (
                </span>
                <span
                  class="mord mathnormal"
                  style="margin-right: 0.03588em;"
                >
                  y
                </span>
                <span
                  class="mclose"
                >
                  )
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`LaTeX Plugin should render inline LaTeX with $..$ syntax 1`] = `
<div>
  <div
    class="ant-x-markdown x-markdown"
    style="direction: ltr;"
  >
    <p>
      <span
        class="inline-katex"
      >
        <span
          class="katex-display"
        >
          <span
            class="katex"
          >
            <span
              aria-hidden="true"
              class="katex-html"
            >
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 0.6833em;"
                />
                <span
                  class="mord mathnormal"
                  style="margin-right: 0.05764em;"
                >
                  E
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2778em;"
                />
                <span
                  class="mrel"
                >
                  =
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2778em;"
                />
              </span>
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 0.8641em;"
                />
                <span
                  class="mord mathnormal"
                >
                  m
                </span>
                <span
                  class="mord"
                >
                  <span
                    class="mord mathnormal"
                  >
                    c
                  </span>
                  <span
                    class="msupsub"
                  >
                    <span
                      class="vlist-t"
                    >
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 0.8641em;"
                        >
                          <span
                            style="top: -3.113em; margin-right: 0.05em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 2.7em;"
                            />
                            <span
                              class="sizing reset-size6 size3 mtight"
                            >
                              <span
                                class="mord mtight"
                              >
                                2
                              </span>
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`LaTeX Plugin should render inline LaTeX with [\\n..\\n] syntax 1`] = `
<div>
  <div
    class="ant-x-markdown x-markdown"
    style="direction: ltr;"
  >
    <p>
      latex: 
      <span
        class="inline-katex"
      >
        <span
          class="katex-display"
        >
          <span
            class="katex"
          >
            <span
              aria-hidden="true"
              class="katex-html"
            >
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 1.1413em; vertical-align: -0.25em;"
                />
                <span
                  class="mord"
                >
                  <span
                    class="mord mathnormal"
                  >
                    L
                  </span>
                  <span
                    class="msupsub"
                  >
                    <span
                      class="vlist-t"
                    >
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 0.8913em;"
                        >
                          <span
                            style="top: -3.113em; margin-right: 0.05em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 2.7em;"
                            />
                            <span
                              class="sizing reset-size6 size3 mtight"
                            >
                              <span
                                class="mord mtight"
                              >
                                <span
                                  class="mord mathnormal mtight"
                                  style="margin-right: 0.07153em;"
                                >
                                  C
                                </span>
                                <span
                                  class="mord mathnormal mtight"
                                >
                                  L
                                </span>
                                <span
                                  class="mord mathnormal mtight"
                                  style="margin-right: 0.07847em;"
                                >
                                  I
                                </span>
                                <span
                                  class="mord mathnormal mtight"
                                  style="margin-right: 0.13889em;"
                                >
                                  P
                                </span>
                              </span>
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
                <span
                  class="mopen"
                >
                  (
                </span>
                <span
                  class="mord mathnormal"
                  style="margin-right: 0.02778em;"
                >
                  θ
                </span>
                <span
                  class="mclose"
                >
                  )
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2778em;"
                />
                <span
                  class="mrel"
                >
                  =
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.2778em;"
                />
              </span>
              <span
                class="base"
              >
                <span
                  class="strut"
                  style="height: 1.8em; vertical-align: -0.65em;"
                />
                <span
                  class="mord"
                >
                  <span
                    class="mord mathbb"
                  >
                    E
                  </span>
                  <span
                    class="msupsub"
                  >
                    <span
                      class="vlist-t vlist-t2"
                    >
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 0.2806em;"
                        >
                          <span
                            style="top: -2.55em; margin-left: 0em; margin-right: 0.05em;"
                          >
                            <span
                              class="pstrut"
                              style="height: 2.7em;"
                            />
                            <span
                              class="sizing reset-size6 size3 mtight"
                            >
                              <span
                                class="mord mathnormal mtight"
                              >
                                t
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          class="vlist-s"
                        >
                          ​
                        </span>
                      </span>
                      <span
                        class="vlist-r"
                      >
                        <span
                          class="vlist"
                          style="height: 0.15em;"
                        >
                          <span />
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
                <span
                  class="mspace"
                  style="margin-right: 0.1667em;"
                />
                <span
                  class="minner"
                >
                  <span
                    class="mopen delimcenter"
                    style="top: 0em;"
                  >
                    <span
                      class="delimsizing size2"
                    >
                      [
                    </span>
                  </span>
                  <span
                    class="mop"
                  >
                    min
                  </span>
                  <span
                    class="mspace"
                    style="margin-right: 0.1667em;"
                  />
                  <span
                    class="minner"
                  >
                    <span
                      class="mopen delimcenter"
                      style="top: 0em;"
                    >
                      <span
                        class="delimsizing size2"
                      >
                        (
                      </span>
                    </span>
                    <span
                      class="mord"
                    >
                      <span
                        class="mord mathnormal"
                        style="margin-right: 0.02778em;"
                      >
                        r
                      </span>
                      <span
                        class="msupsub"
                      >
                        <span
                          class="vlist-t vlist-t2"
                        >
                          <span
                            class="vlist-r"
                          >
                            <span
                              class="vlist"
                              style="height: 0.2806em;"
                            >
                              <span
                                style="top: -2.55em; margin-left: -0.0278em; margin-right: 0.05em;"
                              >
                                <span
                                  class="pstrut"
                                  style="height: 2.7em;"
                                />
                                <span
                                  class="sizing reset-size6 size3 mtight"
                                >
                                  <span
                                    class="mord mathnormal mtight"
                                  >
                                    t
                                  </span>
                                </span>
                              </span>
                            </span>
                            <span
                              class="vlist-s"
                            >
                              ​
                            </span>
                          </span>
                          <span
                            class="vlist-r"
                          >
                            <span
                              class="vlist"
                              style="height: 0.15em;"
                            >
                              <span />
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="mopen"
                    >
                      (
                    </span>
                    <span
                      class="mord mathnormal"
                      style="margin-right: 0.02778em;"
                    >
                      θ
                    </span>
                    <span
                      class="mclose"
                    >
                      )
                    </span>
                    <span
                      class="mord"
                    >
                      <span
                        class="mord accent"
                      >
                        <span
                          class="vlist-t"
                        >
                          <span
                            class="vlist-r"
                          >
                            <span
                              class="vlist"
                              style="height: 0.9468em;"
                            >
                              <span
                                style="top: -3em;"
                              >
                                <span
                                  class="pstrut"
                                  style="height: 3em;"
                                />
                                <span
                                  class="mord mathnormal"
                                >
                                  A
                                </span>
                              </span>
                              <span
                                style="top: -3.2523em;"
                              >
                                <span
                                  class="pstrut"
                                  style="height: 3em;"
                                />
                                <span
                                  class="accent-body"
                                  style="left: -0.1111em;"
                                >
                                  <span
                                    class="mord"
                                  >
                                    ^
                                  </span>
                                </span>
                              </span>
                            </span>
                          </span>
                        </span>
                      </span>
                      <span
                        class="msupsub"
                      >
                        <span
                          class="vlist-t vlist-t2"
                        >
                          <span
                            class="vlist-r"
                          >
                            <span
                              class="vlist"
                              style="height: 0.2806em;"
                            >
                              <span
                                style="top: -2.55em; margin-left: 0em; margin-right: 0.05em;"
                              >
                                <span
                                  class="pstrut"
                                  style="height: 2.7em;"
                                />
                                <span
                                  class="sizing reset-size6 size3 mtight"
                                >
                                  <span
                                    class="mord mathnormal mtight"
                                  >
                                    t
                                  </span>
                                </span>
                              </span>
                            </span>
                            <span
                              class="vlist-s"
                            >
                              ​
                            </span>
                          </span>
                          <span
                            class="vlist-r"
                          >
                            <span
                              class="vlist"
                              style="height: 0.15em;"
                            >
                              <span />
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="mpunct"
                    >
                      ,
                    </span>
                    <span
                      class="mspace"
                      style="margin-right: 0.1667em;"
                    />
                    <span
                      class="mord text"
                    >
                      <span
                        class="mord"
                      >
                        clip
                      </span>
                    </span>
                    <span
                      class="mopen"
                    >
                      (
                    </span>
                    <span
                      class="mord"
                    >
                      <span
                        class="mord mathnormal"
                        style="margin-right: 0.02778em;"
                      >
                        r
                      </span>
                      <span
                        class="msupsub"
                      >
                        <span
                          class="vlist-t vlist-t2"
                        >
                          <span
                            class="vlist-r"
                          >
                            <span
                              class="vlist"
                              style="height: 0.2806em;"
                            >
                              <span
                                style="top: -2.55em; margin-left: -0.0278em; margin-right: 0.05em;"
                              >
                                <span
                                  class="pstrut"
                                  style="height: 2.7em;"
                                />
                                <span
                                  class="sizing reset-size6 size3 mtight"
                                >
                                  <span
                                    class="mord mathnormal mtight"
                                  >
                                    t
                                  </span>
                                </span>
                              </span>
                            </span>
                            <span
                              class="vlist-s"
                            >
                              ​
                            </span>
                          </span>
                          <span
                            class="vlist-r"
                          >
                            <span
                              class="vlist"
                              style="height: 0.15em;"
                            >
                              <span />
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="mopen"
                    >
                      (
                    </span>
                    <span
                      class="mord mathnormal"
                      style="margin-right: 0.02778em;"
                    >
                      θ
                    </span>
                    <span
                      class="mclose"
                    >
                      )
                    </span>
                    <span
                      class="mpunct"
                    >
                      ,
                    </span>
                    <span
                      class="mspace"
                      style="margin-right: 0.1667em;"
                    />
                    <span
                      class="mord"
                    >
                      1
                    </span>
                    <span
                      class="mspace"
                      style="margin-right: 0.2222em;"
                    />
                    <span
                      class="mbin"
                    >
                      −
                    </span>
                    <span
                      class="mspace"
                      style="margin-right: 0.2222em;"
                    />
                    <span
                      class="mord mathnormal"
                    >
                      ϵ
                    </span>
                    <span
                      class="mpunct"
                    >
                      ,
                    </span>
                    <span
                      class="mspace"
                      style="margin-right: 0.1667em;"
                    />
                    <span
                      class="mord"
                    >
                      1
                    </span>
                    <span
                      class="mspace"
                      style="margin-right: 0.2222em;"
                    />
                    <span
                      class="mbin"
                    >
                      +
                    </span>
                    <span
                      class="mspace"
                      style="margin-right: 0.2222em;"
                    />
                    <span
                      class="mord mathnormal"
                    >
                      ϵ
                    </span>
                    <span
                      class="mclose"
                    >
                      )
                    </span>
                    <span
                      class="mord"
                    >
                      <span
                        class="mord accent"
                      >
                        <span
                          class="vlist-t"
                        >
                          <span
                            class="vlist-r"
                          >
                            <span
                              class="vlist"
                              style="height: 0.9468em;"
                            >
                              <span
                                style="top: -3em;"
                              >
                                <span
                                  class="pstrut"
                                  style="height: 3em;"
                                />
                                <span
                                  class="mord mathnormal"
                                >
                                  A
                                </span>
                              </span>
                              <span
                                style="top: -3.2523em;"
                              >
                                <span
                                  class="pstrut"
                                  style="height: 3em;"
                                />
                                <span
                                  class="accent-body"
                                  style="left: -0.1111em;"
                                >
                                  <span
                                    class="mord"
                                  >
                                    ^
                                  </span>
                                </span>
                              </span>
                            </span>
                          </span>
                        </span>
                      </span>
                      <span
                        class="msupsub"
                      >
                        <span
                          class="vlist-t vlist-t2"
                        >
                          <span
                            class="vlist-r"
                          >
                            <span
                              class="vlist"
                              style="height: 0.2806em;"
                            >
                              <span
                                style="top: -2.55em; margin-left: 0em; margin-right: 0.05em;"
                              >
                                <span
                                  class="pstrut"
                                  style="height: 2.7em;"
                                />
                                <span
                                  class="sizing reset-size6 size3 mtight"
                                >
                                  <span
                                    class="mord mathnormal mtight"
                                  >
                                    t
                                  </span>
                                </span>
                              </span>
                            </span>
                            <span
                              class="vlist-s"
                            >
                              ​
                            </span>
                          </span>
                          <span
                            class="vlist-r"
                          >
                            <span
                              class="vlist"
                              style="height: 0.15em;"
                            >
                              <span />
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      class="mclose delimcenter"
                      style="top: 0em;"
                    >
                      <span
                        class="delimsizing size2"
                      >
                        )
                      </span>
                    </span>
                  </span>
                  <span
                    class="mclose delimcenter"
                    style="top: 0em;"
                  >
                    <span
                      class="delimsizing size2"
                    >
                      ]
                    </span>
                  </span>
                </span>
              </span>
            </span>
          </span>
        </span>
      </span>
 end
    </p>
  </div>
</div>
`;

exports[`LaTeX Plugin should support inline block katex render: $$\\n..\\n$$ 1`] = `[Function]`;

exports[`LaTeX Plugin should support inline block katex render: \\[\\n..\\n\\] 1`] = `[Function]`;

exports[`LaTeX Plugin should throw error when config katexOption.throwOnError is true 1`] = `
"KaTeX parse error: Unexpected end of input in a macro argument, expected '}' at end of input: \\begin{align
Please report this to https://github.com/markedjs/marked."
`;
